Start migrate vehicle_service to microservice arch