@@ -9,16 +9,19 @@ import java.util.stream.Collectors;
 import org.aspectj.lang.JoinPoint;
 import org.aspectj.lang.annotation.Aspect;
 import org.aspectj.lang.annotation.Before;
+import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Component;
 
 import jakarta.persistence.EntityManager;
 import jakarta.persistence.PersistenceContext;
 import jakarta.persistence.Query;
 import lombok.extern.slf4j.Slf4j;
+import ma.crm.carental.dtos.client.ClientResponseDto;
 import ma.crm.carental.dtos.interfaces.ClientIdentifiable;
 import ma.crm.carental.dtos.vehicule.VehRequsetDto;
 import ma.crm.carental.dtos.violation.ViolationRequestDto;
 import ma.crm.carental.exception.UnableToProccessIteamException;
+import ma.crm.carental.services.ClientServiceClient;
 import ma.crm.carental.tenantfilter.TenantContext;
 
 @Slf4j
@@ -27,6 +30,15 @@ import ma.crm.carental.tenantfilter.TenantContext;
 public class ClientChecker {
     
 	private static final String ERRORMESSAGE = "access denied or unable to process the item , within client" ;
+
+	private final ClientServiceClient clientServiceClient ;
+
+	@Autowired
+	ClientChecker(
+		ClientServiceClient clientServiceClient
+	) {
+		this.clientServiceClient = clientServiceClient ;
+	}
 
 
     @PersistenceContext
@@ -50,11 +62,12 @@ public class ClientChecker {
 					List<Long> clients = identifiableList.stream()
 							.map(ClientIdentifiable::getClient)
 							.filter(Objects::nonNull)
-							.distinct()  // Remove duplicates
-							.collect(Collectors.toList());
+							.distinct()
+							.toList();
 
 					if (!clients.isEmpty()) {
-						validateClients(clients);
+						// validateClients(clients);
+						validateClientsV2(clients) ;
 					}
 					return;
 				}
@@ -78,6 +91,18 @@ public class ClientChecker {
 		entityManager.clear();
 		
 		if (number != uniqueClients.size()) {
+			throw new UnableToProccessIteamException(ClientChecker.ERRORMESSAGE);
+		}
+	}
+
+
+	private void validateClientsV2(List<Long> clients) throws UnableToProccessIteamException {
+
+		Set<Long> uniqueClients = new HashSet<>(clients);
+
+		List<ClientResponseDto> clientResponseDtos = clientServiceClient.findClients(clients) ;
+		
+		if (clientResponseDtos.size() != uniqueClients.size()) {
 			throw new UnableToProccessIteamException(ClientChecker.ERRORMESSAGE);
 		}
 	}
